--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 
 # 2.0.0
 * Dev - Upgraded the API version to 2.0
-* Dev - Renamed 'cf_zoho_create_entry' hook to 'process_zoho_submission' as the old hook passes a different $object array which will probably break any code hooking this.
+* Dev - Renamed 'lsx_cf_zoho_create_entry' hook to 'process_zoho_submission' as the old hook passes a different $object array which will probably break any code hooking this.
 * Dev - Removed the force text fields
 * Dev - Added in a class for pre-populating the Caldera Form with information from Zoho via a URL
 * Dev - Restructured the Plugin Files and Classes
@@ -17,8 +17,8 @@
 * Fix - Added in 3 options to fix the duplicate checks on Contact and Lead Submission
 
 # 1.1.1
-* Dev - Added A Filter 'cf_zoho_create_entry' to allow manipulation of the request object
-* Dev - Added An Action 'cf_zoho_create_entry_complete' to allow tasks for after creation
+* Dev - Added A Filter 'lsx_cf_zoho_create_entry' to allow manipulation of the request object
+* Dev - Added An Action 'lsx_cf_zoho_create_entry_complete' to allow tasks for after creation
 * Dev - Added a new config page "Field Setup"
 * Fix - Fixed a typo in the get config call which prevented certain tasks from running
 * Dev - Added in a setup page to allow you to force "select" dropdowns via WP
