--- a/languages/lsx-cf-zoho-en_EN.po
+++ b/languages/lsx-cf-zoho-en_EN.po
@@ -1,8 +1,8 @@
-# Copyright (C) 2019 lsx-cf-zoho
-# This file is distributed under the same license as the lsx-cf-zoho package.
+# Copyright (C) 2019 cf-zoho
+# This file is distributed under the same license as the cf-zoho package.
 msgid ""
 msgstr ""
-"Project-Id-Version: lsx-cf-zoho\n"
+"Project-Id-Version: cf-zoho\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
