--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 # Change log
 
-## [[2.0.5]](https://github.com/lightspeeddevelopment/cf-zoho/releases/tag/2.0.5) - Unreleased
+## [[2.0.6]](https://github.com/lightspeeddevelopment/cf-zoho/releases/tag/2.0.6) - Unreleased
+
+### Added
+- Added in an error message which outputs the Zoho error when a request fails.
+
+## [[2.0.5]](https://github.com/lightspeeddevelopment/cf-zoho/releases/tag/2.0.5) - 2020-07-30
 
 ### Fixed
 - [#11](https://github.com/lightspeeddevelopment/cf-zoho/issues/11) Changed the "duplicate email" field to an array instead of a string.
