--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,17 @@
 # Change log
 
+## [[2.0.7]](https://github.com/lightspeeddevelopment/cf-zoho/releases/tag/2.0.6) - 2021-01-?
+
+### Added
+
+### Removed
+- Removed the unused LSX Search UIX templates.
+- 
+
+### Security
+- General testing to ensure compatibility with latest WordPress version (5.6).
+
+
 ## [[2.0.6]](https://github.com/lightspeeddevelopment/cf-zoho/releases/tag/2.0.6) - 2020-08-14
 
 ### Added
